package aircraft;

public class Coordinates {
	private int	longitude;
	private int	latitude;
	private int	height;

	Coordinates(int p_longitude, int p_latitude, int p_height) {
		this.longitude = p_longitude;
		this.latitude = p_latitude;
		this.height = p_height;
	}

	public int getLongitude() {
		return longitude;
	}
	public int getLatitude() {
		return latitude;
	}
	public int getHeight() {
		return height;
	}

	void changeCoordinates(int p_longitude, int p_latitude, int p_height) {
		this.longitude += p_longitude;
		this.latitude += p_latitude;
		this.height += p_height;
		if (this.height > 100) {
			this.height = 100;
		}
	}
}
